--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
 	<title>Mi Squad!</title>
 </head>
 <body>
-	<h1>A-tó-mi-co!!! Squad</h1>
-	<div id="integrante">
-		<ul id="integrante"></ul>
-	</div>
+	<style type="text/css">
+		body{
+			font-family: helvetica;
+		}
+		.espacio{
+			align-content: center;
+		}
+	</style>
+		<h1>A-tó-mi-co!!! Squad</h1>
 
-	
-
-
-
+		<img src="img/homero.jpg" alt="imagen de homero simpson" height="10%" width="25%">
+		
+		<div id="espacio">
+			<ul>
+				<div id="integrante"></div>
+			</ul>
+		</div>
+		
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
