--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Mi Squad!</title>
+	<script src="https://use.fontawesome.com/b98428e78e.js"></script>
 </head>
 <body>
 	<style type="text/css">
@@ -21,8 +22,10 @@
 		<img src="img/homero.jpg" alt="imagen de homero simpson" height="10%" width="25%">
 		
 	    <div id="integrante"></div>
-		
+	
 		
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
+
+
